--- a/index.html
+++ b/index.html
@@ -1,2 +1,132 @@
-<h1>ohmyfood</h1>
-<p>Bienvenue chez ohmyfood </p>
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./sass/main.css">
+</head>
+<body>
+    <div class="main-container">
+    <header>
+        <div class="logo">
+            <a href="index.html" class="lien-icon">
+                <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
+            </a>
+        </div>
+    </header>
+    <main>
+        <section class="local">
+            <i class="fa-solid fa-location-dot"></i>
+            <span class="local__text">Paris, Belleville</span>
+        </section>
+        <div class="info">
+            <h1>Reservez le menu qui vous convient</h1>
+            <p class="info__subtile">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <a class="info__btn">Explorer nos restaurants</a>
+        </div>
+        <section class="fonction">
+            <div class="container">
+                <h1>Fonctionnement</h1>
+            </div>
+            <ul class="fonction__icons">
+                <li class="fonction__icons">
+                    <span class="fonction__number">1</span>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <span>Choisissez un restaurant</span>
+                </li>
+                <li class="fonction__icon">
+                    <span class="fonction__number">2</span>
+                    <i class="fa-solid fa-list"></i>
+                    <span>Composez votre menu</span>
+                </li>
+                <li class="fonction__icon">
+                    <span class="fonction__number">3</span>
+                    <i class="fa-solid fa-store"></i>
+                    <span>Dégustez au restaurant</span>
+                </li>
+            </ul>
+        </section>
+        <section class="restaurants">
+            <div class="container">
+                <h1>Restaurans</h1>
+            <div class="card">
+                <a href="la-palette-du-gout.html" class="card">
+                    <div class="card__image">
+                        <img src="./images/restaurants/jay-wennington.jpg" alt="La palette du gout">
+                        <span class="card__badge">Nouveau</span>
+                    </div>
+                        <div class="card__content">
+                            <div class="card__txt">
+                                <h2 class="card__title">La palette du goût</h2>
+                                <span class="card__subtile">Ménilmontant</span>
+                            </div>
+                        </div>
+                        <div class="card__rating">
+                            <i class="fa-thin fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="La-note-enchantee.html" class="card">
+                    <div class="card__image">
+                        <img src="./images/restaurants/stil.jpg" alt="La note enchantee">
+                        <span class="card__badge">Nouveau</span>
+                    </div>
+                        <div class="card__content">
+                            <h2 class="card__title">La note enchantée</h2>
+                            <span class="card__subtile">Charonne</span>
+                        </div>
+                    <div class="card__rating">
+                        <i class="fa-thin fa-heart"></i>
+                    </div>
+                </a>
+                <a href="A-la-francaise.html" class="card">
+                    <div class="card__image">
+                        <img src="./images/restaurants/toa-heftiba.jpg" alt="A la francaise">
+                    </div>
+                        <div class="card__content">
+                            <h2 class="card__title">A la française</h2>
+                            <span class="card__subtile">Cité Rouge</span>
+                        </div>
+                    <div class="card__rating">
+                        <i class="fa-thin fa-heart"></i>
+                    </div>
+                </a>
+                <a href="Le-delice-des-sens" class="card">
+                    <div class="card__image">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis.jpg" alt="Le delice des sens">
+                    </div>
+                        <div class="card__content">
+                            <h2 class="card__title">Le délice des sens</h2>
+                            <span class="card__subtile">Folie-Méricourt</span>
+                        </div>
+                    <div class="card__rating">
+                        <i class="fa-thin fa-heart"></i>
+                    </div>
+                </a>
+            </div>   
+            </div>
+        </section>
+    </main>
+        <footer>
+            <div class="title">
+                <img src="./images/logo/ohmyfood.png">
+            </div>
+            <div class="menu">
+                <i class="fa-solid fa-utensils"></i>
+                <a>Proposer un restaurant</a>
+                <i class="fa-solid fa-handshake-angle"></i>
+                <a>Devenir partenaire</a>
+                <a>Mentions légales</a>
+                <a>Contact</a>
+            </div>
+        </footer>
+</body>
+</html>
