--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -10,7 +12,7 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <div class="main-container">
+    <div class="main-container2">
         <header>
             <div class="logo">
                 <a href="la-palette-du-gout.html" class="lien-icon">
@@ -20,9 +22,119 @@
             </div>
         </header>
     <main>
-        <section class="en'tete">
+        <section class="en-tete">
             <img src="./images/restaurants/jay-wennington.jpg" alt="La palette du gout">
         </section>
+        <section class="palette">
+            <div class="info">
+                <h4>La palette du goût</h4>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class="title2">
+                <h5>ENTRÈES</h5>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Fricassée d'escargots</h6>
+                    <span class="card__subtile2">Au piment d'Espelette</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">25€</i>
+                </div>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Foie gras de canard mi-cuit</h6>
+                    <span class="card__subtile2">Et ses copeaux de truffes noire</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">35€</i>
+                </div>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Oeuf au plat</h6>
+                    <span class="card__subtile2">Assaisonné à la truffe sur lit de caviar</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">20€</i>
+                </div>
+            </div>
+            <div class="title2">
+                <h5>PLATS</h5>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Filet de boeuf aux herbes</h6>
+                    <span class="card__subtile2">Accompagné de sa ribambelle de légumes</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">40€</i>
+                </div>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Parmentier de queue de boeuf</h6>
+                    <span class="card__subtile2">À la truffe noire sur sa purée de panais</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">35€</i>
+                </div>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Filet de turbo</h6>
+                    <span class="card__subtile2">Aux agrumes</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">44€</i>
+                </div>
+            </div>
+            <div class="title2">
+                <h5>DESSERTS</h5>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Paris-Brest</h6>
+                    <span class="card__subtile2">Revisité</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">18€</i>
+                </div>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Macaron au chocolat d'exception</h6>
+                    <span class="card__subtile2">Et glace à la vanille de Madagascar</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">22€</i>
+                </div>
+            </div>
+            <div class="card__content2">
+                <div class="card__txt2">
+                    <h6 class="card__title2">Mousse au chocolat</h6>
+                    <span class="card__subtile2">Au piment d'Espelette et à la truffe noire</span>
+                </div>
+                <div class="card__rating2">
+                    <i class="info__prix2">23€</i>
+                </div>
+            </div>
+            <div class="button2">
+                <a class="button__btn2">Commander</a>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="title">
+            <h3>ohmyfood</h3>
+        </div>
+        <nav class="menu">
+            <a><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+            <a> <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+            <a>Mentions légales</a>
+            <a>Contact</a>
+        </nav>
+    </footer>
 </body>
 </html>
