integration pages html 5

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -16,7 +16,7 @@
 <div class="main-container2">
     <header>
         <div class="logo">
-            <a href="la-palette-du-gout.html" class="lien-icon">
+            <a href="index.html" class="lien-icon">
                 <i class="fa-solid fa-arrow-left"></i>
                 <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
             </a>
@@ -26,8 +26,8 @@
     <section class="en-tete">
         <img src="./images/restaurants/stil.jpg" alt="La palette du gout">
     </section>
-    <section class="note">
-        <div class="info">
+    <section class="container-menu">
+        <div class="info-title">
             <h4>La note enchantée</h4>
             <i class="fa-regular fa-heart"></i>
         </div>
