--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -15,7 +15,7 @@
     <div class="main-container2">
         <header>
             <div class="logo">
-                <a href="la-palette-du-gout.html" class="lien-icon">
+                <a href="index.html" class="lien-icon">
                     <i class="fa-solid fa-arrow-left"></i>
                     <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
                 </a>
@@ -25,8 +25,8 @@
         <section class="en-tete">
             <img src="./images/restaurants/jay-wennington.jpg" alt="La palette du gout">
         </section>
-        <section class="palette">
-            <div class="info">
+        <section class="container-menu">
+            <div class="info-title">
                 <h4>La palette du goût</h4>
                 <i class="fa-regular fa-heart"></i>
             </div>
