--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ohmyfood</title>
-</head>
-<body>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./sass/main.css">
+    <title>ohmyfood</title>
+</head>
 </body>
 <div class="main-container2">
     <header>
@@ -26,7 +25,7 @@
     <section class="en-tete">
         <img src="./images/restaurants/stil.jpg" alt="La palette du gout">
     </section>
-    <section class="container-menu">
+    <section class="container-menu2">
         <div class="info-title">
             <h4>La note enchantée</h4>
             <i class="fa-regular fa-heart"></i>
