integration page html 8

--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -25,7 +25,7 @@
             <section class="en-tete">
                 <img src="./images/restaurants/louis-hansel-shotsoflouis.jpg" alt="La palette du gout">
             </section>
-            <section class="container-menu">
+            <section class="container-menu2">
                 <div class="info-title">
                     <h4>Le délice des sens</h4>
                     <i class="fa-regular fa-heart"></i>
