--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -25,7 +25,7 @@
         <section class="en-tete">
             <img src="./images/restaurants/toa-heftiba.jpg" alt="La palette du gout">
         </section>
-        <section class="container-menu">
+        <section class="container-menu2">
             <div class="info-title">
                 <h4>A la française</h4>
                 <i class="fa-regular fa-heart"></i>
