--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -32,7 +31,7 @@
         <div class="info">
             <h1>Reservez le menu qui vous convient</h1>
             <p class="info__subtile">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a class="info__btn">Explorer nos restaurants</a>
+            <button class="info__btn">Explorer nos restaurants</button>
         </div>
         <section class="fonction">
                 <h2>Fonctionnement</h2>
@@ -57,7 +56,7 @@
         </section>
         <section class="restaurants">
             <div class="container">
-                <h2>Restaurans</h2>    
+                <h2>Restaurants</h2>    
                 <a href="la-palette-du-gout.html" class="card">
                     <div class="card__image">
                         <img src="./images/restaurants/jay-wennington.jpg" alt="La palette du gout">
