--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -25,7 +25,7 @@
         <section class="en-tete">
             <img src="./images/restaurants/jay-wennington.jpg" alt="La palette du gout">
         </section>
-        <section class="container-menu">
+        <section class="container-menu2">
             <div class="info-title">
                 <h4>La palette du goût</h4>
                 <i class="fa-regular fa-heart"></i>
@@ -39,7 +39,7 @@
                     <span class="card__subtile2">Au piment d'Espelette</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">25€</i>
+                    <span class="info__prix2">25€</span>
                 </div>
             </div>
             <div class="card__content2">
@@ -48,7 +48,7 @@
                     <span class="card__subtile2">Et ses copeaux de truffes noire</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">35€</i>
+                    <span class="info__prix2">35€</span>
                 </div>
             </div>
             <div class="card__content2">
@@ -57,7 +57,7 @@
                     <span class="card__subtile2">Assaisonné à la truffe sur lit de caviar</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">20€</i>
+                    <span class="info__prix2">20€</span>
                 </div>
             </div>
             <div class="title2">
@@ -69,7 +69,7 @@
                     <span class="card__subtile2">Accompagné de sa ribambelle de légumes</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">40€</i>
+                    <span class="info__prix2">40€</span>
                 </div>
             </div>
             <div class="card__content2">
@@ -78,7 +78,7 @@
                     <span class="card__subtile2">À la truffe noire sur sa purée de panais</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">35€</i>
+                    <span class="info__prix2">35€</span>
                 </div>
             </div>
             <div class="card__content2">
@@ -87,7 +87,7 @@
                     <span class="card__subtile2">Aux agrumes</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">44€</i>
+                    <span class="info__prix2">44€</span>
                 </div>
             </div>
             <div class="title2">
@@ -99,7 +99,7 @@
                     <span class="card__subtile2">Revisité</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">18€</i>
+                    <span class="info__prix2">18€</span>
                 </div>
             </div>
             <div class="card__content2">
@@ -108,7 +108,7 @@
                     <span class="card__subtile2">Et glace à la vanille de Madagascar</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">22€</i>
+                    <span class="info__prix2">22€</span>
                 </div>
             </div>
             <div class="card__content2">
@@ -117,7 +117,7 @@
                     <span class="card__subtile2">Au piment d'Espelette et à la truffe noire</span>
                 </div>
                 <div class="card__rating2">
-                    <i class="info__prix2">23€</i>
+                    <span class="info__prix2">23€</span>
                 </div>
             </div>
             <div class="button2">
