--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="./sass/main.css">
 </head>
 <body>
+    <div class="loader">
+        <span class="fas fa-solid fa-cog fa-5x"></span>
+        
+    </div>
     <div class="main-container">
     <header>
         <div class="logo">
@@ -68,7 +72,8 @@
                                 <span class="card__subtile">Ménilmontant</span>
                             </div>
                             <div class="card__rating">
-                                <i class="fa-solid fa-heart"></i>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
                         </div> 
                 </a>
@@ -83,7 +88,7 @@
                                 <span class="card__subtile">Charonne</span>
                             </div>
                             <div class="card__rating">
-                                <i class="fa-solid fa-heart"></i>
+                                <i class="fa-regular fa-heart"></i>
                             </div>
                         </div>
                 </a>
@@ -97,7 +102,7 @@
                                 <span class="card__subtile">Cité Rouge</span>
                             </div>
                             <div class="card__rating">
-                                <i class="fa-solid fa-heart"></i>
+                                <i class="fa-regular fa-heart"></i>
                             </div>
                         </div>
                 </a>
@@ -111,7 +116,7 @@
                                 <span class="card__subtile">Folie-Méricourt</span>
                             </div>
                             <div class="card__rating">
-                                <i class="fa-solid fa-heart"></i>
+                                <i class="fa-regular fa-heart"></i>
                             </div>
                         </div>
                 </a>
