integration des animation coeurs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <div class="info">
             <h1>Reservez le menu qui vous convient</h1>
             <p class="info__subtile">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <a href="#lienVersSectionRestaurants">
             <button class="info__btn">Explorer nos restaurants</button>
+            </a>
         </div>
         <section class="fonction">
                 <h2>Fonctionnement</h2>
@@ -58,7 +60,7 @@
                 </li>
             </ul>
         </section>
-        <section class="restaurants">
+        <section class="restaurants" id="lienVersSectionRestaurants">
             <div class="container">
                 <h2>Restaurants</h2>    
                 <a href="la-palette-du-gout.html" class="card">
@@ -88,7 +90,8 @@
                                 <span class="card__subtile">Charonne</span>
                             </div>
                             <div class="card__rating">
-                                <i class="fa-regular fa-heart"></i>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
                         </div>
                 </a>
@@ -102,7 +105,8 @@
                                 <span class="card__subtile">Cité Rouge</span>
                             </div>
                             <div class="card__rating">
-                                <i class="fa-regular fa-heart"></i>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
                         </div>
                 </a>
@@ -116,7 +120,8 @@
                                 <span class="card__subtile">Folie-Méricourt</span>
                             </div>
                             <div class="card__rating">
-                                <i class="fa-regular fa-heart"></i>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
                         </div>
                 </a>
