--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -28,7 +28,8 @@
     <section class="container-menu2">
         <div class="info-title">
             <h4>La note enchantée</h4>
-            <i class="fa-regular fa-heart"></i>
+            <i class="far fa-heart"></i>
+            <i class="fas fa-heart"></i>
         </div>
         <div class="title2">
             <h5>ENTRÈES</h5>
