ingreation animation check

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -42,6 +42,9 @@
                 <div class="card__rating2">
                     <span class="info__prix2">25€</span>
                 </div>
+                <div>
+                    <span class="info__check">check</span>
+                </div>
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
