--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </a>
         </div>
         <section class="fonction">
-                <h2>Fonctionnement</h2>
-            </div>
+            <div class="container">
+            <h2>Fonctionnement</h2>
             <ul class="fonction__icon">
                 <li>
                     <span class="fonction__number">1</span>
@@ -59,6 +59,7 @@
                     <span>Dégustez au restaurant</span>
                 </li>
             </ul>
+        </div> 
         </section>
         <section class="restaurants" id="lienVersSectionRestaurants">
             <div class="container">
