--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -42,7 +42,7 @@
                 <div class="card__rating2">
                     <span class="info__prix2">25€</span>
                 </div>
-                <div>
+                <div class="check">
                     <span class="info__check">check</span>
                 </div>
             </div>
