integration du responsive

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -41,9 +41,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">25€</span>
-                </div>
-                <div class="check">
-                    <span class="info__check">check</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="card__content2">
@@ -53,6 +51,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">35€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="card__content2">
@@ -62,6 +61,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">20€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="title2">
@@ -74,6 +74,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">40€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="card__content2">
@@ -83,6 +84,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">35€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="card__content2">
@@ -92,6 +94,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">44€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="title2">
@@ -104,6 +107,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">18€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="card__content2">
@@ -113,6 +117,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">22€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="card__content2">
@@ -122,6 +127,7 @@
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">23€</span>
+                    <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
             <div class="button2">
