--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -40,7 +40,8 @@
                         <span class="card__subtile2">Assaisonné au yuzu</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">25€</i>
+                        <span class="info__prix2">25€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="card__content2">
@@ -49,7 +50,8 @@
                         <span class="card__subtile2">Et sa farandole de petits légumes</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">35€</i>
+                        <span class="info__prix2">35€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="card__content2">
@@ -58,7 +60,8 @@
                         <span class="card__subtile2">Et sa crème de truffe</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">40€</i>
+                        <span class="info__prix2">40€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="title2">
@@ -70,7 +73,8 @@
                         <span class="card__subtile2">Et sa crème de truffe</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">40€</i>
+                        <span class="info__prix2">40€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="card__content2">
@@ -79,7 +83,8 @@
                         <span class="card__subtile2">Et ses légumes de saison</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">35€</i>
+                        <span class="info__prix2">35€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="card__content2">
@@ -88,7 +93,8 @@
                         <span class="card__subtile2">Et sa purée de panais</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">44€</i>
+                        <span class="info__prix2">44€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="title2">
@@ -100,7 +106,8 @@
                         <span class="card__subtile2">Du chef</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">18€</i>
+                        <span class="info__prix2">18€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="card__content2">
@@ -109,7 +116,8 @@
                         <span class="card__subtile2">Revisitée</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">22€</i>
+                        <span class="info__prix2">22€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="card__content2">
@@ -118,7 +126,8 @@
                         <span class="card__subtile2">A la noisette</span>
                     </div>
                     <div class="card__rating2">
-                        <i class="info__prix2">23€</i>
+                        <span class="info__prix2">23€</span>
+                        <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
                 <div class="button2">
