--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </section>
         <section class="restaurants" id="lienVersSectionRestaurants">
             <div class="container">
-                <h2>Restaurants</h2>    
+                <h2>Restaurants</h2>
+            <div class="containerCardRestaurant">   
                 <a href="la-palette-du-gout.html" class="card">
                     <div class="card__image">
                         <img src="./images/restaurants/jay-wennington.jpg" alt="La palette du gout">
@@ -126,6 +127,7 @@
                             </div>
                         </div>
                 </a>
+            </div> 
             </div>   
             </div>
         </section>
