--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -40,7 +40,8 @@
                 <span class="card__subtile2">Accompagnées de leur crème à la truffe</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">25€</i>
+                <span class="info__prix2">25€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="card__content2">
@@ -49,7 +50,8 @@
                 <span class="card__subtile2">Sur blini à la farine de blé noir</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">35€</i>
+                <span class="info__prix2">35€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="card__content2">
@@ -58,7 +60,8 @@
                 <span class="card__subtile2">Marinés aux zestes d'orange</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">20€</i>
+                <span class="info__prix2">20€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="card__content2">
@@ -67,7 +70,8 @@
                 <span class="card__subtile2">Confiture de figue et pain toasté</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">35€</i>
+                <span class="info__prix2">35€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="title2">
@@ -79,7 +83,8 @@
                 <span class="card__subtile2">Sur lit de purée de céleri-rave</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">40€</i>
+                <span class="info__prix2">40€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="card__content2">
@@ -88,7 +93,8 @@
                 <span class="card__subtile2">Purée de patate douce</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">35€</i>
+                <span class="info__prix2">35€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="card__content2">
@@ -97,7 +103,8 @@
                 <span class="card__subtile2">Et riz sauvage aux zestes de citron</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">45€</i>
+                <span class="info__prix2">45€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="title2">
@@ -109,7 +116,8 @@
                 <span class="card__subtile2">Glace caramel brun et sel de Guérande</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">18€</i>
+                <span class="info__prix2">18€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="card__content2">
@@ -118,7 +126,8 @@
                 <span class="card__subtile2">Avec son coulis de citron</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">22€</i>
+                <span class="info__prix2">22€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="card__content2">
@@ -127,7 +136,8 @@
                 <span class="card__subtile2">Déstructurée</span>
             </div>
             <div class="card__rating2">
-                <i class="info__prix2">23€</i>
+                <span class="info__prix2">23€</span>
+                <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
         <div class="button2">
