integration du responsive 3

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -34,6 +34,7 @@
             <div class="title2">
                 <h5>ENTRÈES</h5>
             </div>
+        <div class="entree">
             <div class="card__content2">
                 <div class="card__txt2">
                     <h6 class="card__title2">Fricassée d'escargots</h6>
@@ -64,9 +65,11 @@
                     <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
+        </div>
             <div class="title2">
                 <h5>PLATS</h5>
             </div>
+        <div class="plat">
             <div class="card__content2">
                 <div class="card__txt2">
                     <h6 class="card__title2">Filet de boeuf aux herbes</h6>
@@ -97,9 +100,11 @@
                     <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
+        </div>
             <div class="title2">
                 <h5>DESSERTS</h5>
             </div>
+        <div class="dessert">
             <div class="card__content2">
                 <div class="card__txt2">
                     <h6 class="card__title2">Paris-Brest</h6>
@@ -130,6 +135,7 @@
                     <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
+        </div>
             <div class="button2">
                 <a class="button__btn2">Commander</a>
             </div>
