integration des corrections

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,13 +31,13 @@
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
             </div>
+            <div class="entree">
             <div class="title2">
-                <h5>ENTRÈES</h5>
+                <h2>ENTRÈES</h2>
             </div>
-        <div class="entree">
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Fricassée d'escargots</h6>
+                    <h3 class="card__title2">Fricassée d'escargots</h3>
                     <span class="card__subtile2">Au piment d'Espelette</span>
                 </div>
                 <div class="card__rating2">
@@ -47,7 +47,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Foie gras de canard mi-cuit</h6>
+                    <h3 class="card__title2">Foie gras de canard mi-cuit</h3>
                     <span class="card__subtile2">Et ses copeaux de truffes noire</span>
                 </div>
                 <div class="card__rating2">
@@ -57,7 +57,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Oeuf au plat</h6>
+                    <h3 class="card__title2">Oeuf au plat</h3>
                     <span class="card__subtile2">Assaisonné à la truffe sur lit de caviar</span>
                 </div>
                 <div class="card__rating2">
@@ -66,13 +66,13 @@
                 </div>
             </div>
         </div>
-            <div class="title2">
-                <h5>PLATS</h5>
-            </div>
         <div class="plat">
+            <div class="title2">
+                <h2>PLATS</h2>
+            </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Filet de boeuf aux herbes</h6>
+                    <h3 class="card__title2">Filet de boeuf aux herbes</h3>
                     <span class="card__subtile2">Accompagné de sa ribambelle de légumes</span>
                 </div>
                 <div class="card__rating2">
@@ -82,7 +82,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Parmentier de queue de boeuf</h6>
+                    <h3 class="card__title2">Parmentier de queue de boeuf</h3>
                     <span class="card__subtile2">À la truffe noire sur sa purée de panais</span>
                 </div>
                 <div class="card__rating2">
@@ -92,7 +92,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Filet de turbo</h6>
+                    <h3 class="card__title2">Filet de turbo</h3>
                     <span class="card__subtile2">Aux agrumes</span>
                 </div>
                 <div class="card__rating2">
@@ -101,13 +101,13 @@
                 </div>
             </div>
         </div>
-            <div class="title2">
-                <h5>DESSERTS</h5>
-            </div>
         <div class="dessert">
+            <div class="title2">
+                <h2>DESSERTS</h2>
+            </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Paris-Brest</h6>
+                    <h3 class="card__title2">Paris-Brest</h3>
                     <span class="card__subtile2">Revisité</span>
                 </div>
                 <div class="card__rating2">
@@ -117,7 +117,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Macaron au chocolat d'exception</h6>
+                    <h3 class="card__title2">Macaron au chocolat d'exception</h3>
                     <span class="card__subtile2">Et glace à la vanille de Madagascar</span>
                 </div>
                 <div class="card__rating2">
@@ -127,7 +127,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Mousse au chocolat</h6>
+                    <h3 class="card__title2">Mousse au chocolat</h3>
                     <span class="card__subtile2">Au piment d'Espelette et à la truffe noire</span>
                 </div>
                 <div class="card__rating2">
@@ -152,5 +152,6 @@
             <a>Contact</a>
         </nav>
     </footer>
+    </div>
 </body>
 </html>
