--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,12 +31,13 @@
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
             </div>
+            <div class="entree">
             <div class="title2">
-                <h5>ENTRÈES</h5>
+                <h2>ENTRÈES</h2>
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Tartare de poulpe acidulé</h6>
+                    <h3 class="card__title2">Tartare de poulpe acidulé</h3>
                     <span class="card__subtile2">Au zestes d'orange</span>
                 </div>
                 <div class="card__rating2">
@@ -46,7 +47,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Velouté de légumes d'antan</h6>
+                    <h3 class="card__title2">Velouté de légumes d'antan</h3>
                     <span class="card__subtile2">Carotte, panais, topinambour</span>
                 </div>
                 <div class="card__rating2">
@@ -56,7 +57,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Soupe à l'oignon</h6>
+                    <h3 class="card__title2">Soupe à l'oignon</h3>
                     <span class="card__subtile2">Revisitée</span>
                 </div>
                 <div class="card__rating2">
@@ -64,12 +65,14 @@
                     <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
+            </div>
+            <div class="plat">
             <div class="title2">
-                <h5>PLATS</h5>
+                <h2>PLATS</h2>
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Coquilles Saint-Jacques</h6>
+                    <h3 class="card__title2">Coquilles Saint-Jacques</h3>
                     <span class="card__subtile2">Accompagné d'une purée de panais</span>
                 </div>
                 <div class="card__rating2">
@@ -79,7 +82,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Magret de canard</h6>
+                    <h3 class="card__title2">Magret de canard</h3>
                     <span class="card__subtile2">Et parmentier de pommes de terre</span>
                 </div>
                 <div class="card__rating2">
@@ -89,7 +92,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Pigeonneau d'Ille-et-vilaine</h6>
+                    <h3 class="card__title2">Pigeonneau d'Ille-et-vilaine</h3>
                     <span class="card__subtile2">Sur son lit de gnocchis aux légumes</span>
                 </div>
                 <div class="card__rating2">
@@ -97,12 +100,14 @@
                     <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
             </div>
+            </div>
+            <div class="dessert">
             <div class="title2">
-                <h5>DESSERTS</h5>
+                <h2>DESSERTS</h2>
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Pétales de violettes glacés</h6>
+                    <h3 class="card__title2">Pétales de violettes glacés</h3>
                     <span class="card__subtile2">Et purée de noisette</span>
                 </div>
                 <div class="card__rating2">
@@ -112,7 +117,7 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Fondant au chocolat</h6>
+                    <h3 class="card__title2">Fondant au chocolat</h3>
                     <span class="card__subtile2">Revisité</span>
                 </div>
                 <div class="card__rating2">
@@ -122,13 +127,14 @@
             </div>
             <div class="card__content2">
                 <div class="card__txt2">
-                    <h6 class="card__title2">Millefeuille croustillant</h6>
+                    <h3 class="card__title2">Millefeuille croustillant</h3>
                     <span class="card__subtile2">Myrtilles et pâte d'amande</span>
                 </div>
                 <div class="card__rating2">
                     <span class="info__prix2">23€</span>
                     <div class="info__check fa-solid fa-circle-check"></div>
                 </div>
+            </div>
             </div>
             <div class="button2">
                 <a class="button__btn2">Commander</a>
@@ -146,5 +152,6 @@
             <a>Contact</a>
         </nav>
     </footer>
+    </div>
 </body>
 </html>
