--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./sass/main.css">
     <title>ohmyfood</title>
 </head>
-</body>
+<body>
 <div class="main-container2">
     <header>
         <div class="logo">
@@ -31,12 +31,13 @@
             <i class="far fa-heart"></i>
             <i class="fas fa-heart"></i>
         </div>
+        <div class="entree">
         <div class="title2">
-            <h5>ENTRÈES</h5>
+            <h2>ENTRÈES</h2>
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Ravioles de foie gras</h6>
+                <h3 class="card__title2">Ravioles de foie gras</h3>
                 <span class="card__subtile2">Accompagnées de leur crème à la truffe</span>
             </div>
             <div class="card__rating2">
@@ -46,7 +47,7 @@
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Caviar osciètre</h6>
+                <h3 class="card__title2">Caviar osciètre</h3>
                 <span class="card__subtile2">Sur blini à la farine de blé noir</span>
             </div>
             <div class="card__rating2">
@@ -56,7 +57,7 @@
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Homard et espuma de potiron</h6>
+                <h3 class="card__title2">Homard et espuma de potiron</h3>
                 <span class="card__subtile2">Marinés aux zestes d'orange</span>
             </div>
             <div class="card__rating2">
@@ -66,7 +67,7 @@
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Foie gras de canard cuit entier</h6>
+                <h3 class="card__title2">Foie gras de canard cuit entier</h3>
                 <span class="card__subtile2">Confiture de figue et pain toasté</span>
             </div>
             <div class="card__rating2">
@@ -74,12 +75,14 @@
                 <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
+        </div>
+        <div class="plat">
         <div class="title2">
-            <h5>PLATS</h5>
+            <h2>PLATS</h2>
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Noix de coquilles Saint-Jacques</h6>
+                <h3 class="card__title2">Noix de coquilles Saint-Jacques</h3>
                 <span class="card__subtile2">Sur lit de purée de céleri-rave</span>
             </div>
             <div class="card__rating2">
@@ -89,7 +92,7 @@
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Langoustine poêlée</h6>
+                <h3 class="card__title2">Langoustine poêlée</h3>
                 <span class="card__subtile2">Purée de patate douce</span>
             </div>
             <div class="card__rating2">
@@ -99,7 +102,7 @@
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Mijoté de queue de boeuf</h6>
+                <h3 class="card__title2">Mijoté de queue de boeuf</h3>
                 <span class="card__subtile2">Et riz sauvage aux zestes de citron</span>
             </div>
             <div class="card__rating2">
@@ -107,12 +110,14 @@
                 <div class="info__check fa-solid fa-circle-check"></div>
             </div>
         </div>
+        </div>
+        <div class="dessert">
         <div class="title2">
-            <h5>DESSERTS</h5>
+            <h2>DESSERTS</h2>
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Macaron noisette et chocolat</h6>
+                <h3 class="card__title2">Macaron noisette et chocolat</h3>
                 <span class="card__subtile2">Glace caramel brun et sel de Guérande</span>
             </div>
             <div class="card__rating2">
@@ -122,7 +127,7 @@
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Baba au rhum revisité</h6>
+                <h3 class="card__title2">Baba au rhum revisité</h3>
                 <span class="card__subtile2">Avec son coulis de citron</span>
             </div>
             <div class="card__rating2">
@@ -132,13 +137,14 @@
         </div>
         <div class="card__content2">
             <div class="card__txt2">
-                <h6 class="card__title2">Tarte au citron meringuée</h6>
+                <h3 class="card__title2">Tarte au citron meringuée</h3>
                 <span class="card__subtile2">Déstructurée</span>
             </div>
             <div class="card__rating2">
                 <span class="info__prix2">23€</span>
                 <div class="info__check fa-solid fa-circle-check"></div>
             </div>
+        </div>
         </div>
         <div class="button2">
             <a class="button__btn2">Commander</a>
@@ -156,4 +162,6 @@
         <a>Contact</a>
     </nav>
 </footer>
+</div>
+</body>
 </html>
