--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,12 +31,13 @@
                     <i class="far fa-heart"></i>
                     <i class="fas fa-heart"></i>
                 </div>
+                <div class="entree">
                 <div class="title2">
-                    <h5>ENTRÈES</h5>
+                    <h2>ENTRÈES</h2>
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Tatare de thon</h6>
+                        <h3 class="card__title2">Tatare de thon</h3>
                         <span class="card__subtile2">Assaisonné au yuzu</span>
                     </div>
                     <div class="card__rating2">
@@ -46,7 +47,7 @@
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Bouchée de homard croustillant</h6>
+                        <h3 class="card__title2">Bouchée de homard croustillant</h3>
                         <span class="card__subtile2">Et sa farandole de petits légumes</span>
                     </div>
                     <div class="card__rating2">
@@ -56,7 +57,7 @@
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Poulet rôti aux herbes de Provence</h6>
+                        <h3 class="card__title2">Poulet rôti aux herbes de Provence</h3>
                         <span class="card__subtile2">Et sa crème de truffe</span>
                     </div>
                     <div class="card__rating2">
@@ -64,12 +65,14 @@
                         <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
+                </div>
+                <div class="plat">
                 <div class="title2">
-                    <h5>PLATS</h5>
+                    <h2>PLATS</h2>
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Poulet rôti aux herbes de Provence</h6>
+                        <h3 class="card__title2">Poulet rôti aux herbes de Provence</h3>
                         <span class="card__subtile2">Et sa crème de truffe</span>
                     </div>
                     <div class="card__rating2">
@@ -79,7 +82,7 @@
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Langouste rôtie</h6>
+                        <h3 class="card__title2">Langouste rôtie</h3>
                         <span class="card__subtile2">Et ses légumes de saison</span>
                     </div>
                     <div class="card__rating2">
@@ -89,7 +92,7 @@
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Côte de boeuf Angus</h6>
+                        <h3 class="card__title2">Côte de boeuf Angus</h3>
                         <span class="card__subtile2">Et sa purée de panais</span>
                     </div>
                     <div class="card__rating2">
@@ -97,12 +100,14 @@
                         <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
                 </div>
+                </div>
+                <div class="dessert">
                 <div class="title2">
-                    <h5>DESSERTS</h5>
+                    <h2>DESSERTS</h2>
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Farandole de desserts</h6>
+                        <h3 class="card__title2">Farandole de desserts</h3>
                         <span class="card__subtile2">Du chef</span>
                     </div>
                     <div class="card__rating2">
@@ -112,7 +117,7 @@
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Crème brulée</h6>
+                        <h3 class="card__title2">Crème brulée</h3>
                         <span class="card__subtile2">Revisitée</span>
                     </div>
                     <div class="card__rating2">
@@ -122,13 +127,14 @@
                 </div>
                 <div class="card__content2">
                     <div class="card__txt2">
-                        <h6 class="card__title2">Tiramisu</h6>
+                        <h3 class="card__title2">Tiramisu</h3>
                         <span class="card__subtile2">A la noisette</span>
                     </div>
                     <div class="card__rating2">
                         <span class="info__prix2">23€</span>
                         <div class="info__check fa-solid fa-circle-check"></div>
                     </div>
+                </div>
                 </div>
                 <div class="button2">
                     <a class="button__btn2">Commander</a>
@@ -145,6 +151,7 @@
                 <a>Mentions légales</a>
                 <a>Contact</a>
             </nav>
-        </footer>    
+        </footer>   
+    </div> 
 </body>
 </html>
