--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             </div>
                         </div> 
                 </a>
-                <a href="La-note-enchantee.html" class="card">
+                <a href="la-note-enchantee.html" class="card">
                     <div class="card__image">
                         <img src="./images/restaurants/stil.jpg" alt="La note enchantee">
                         <span class="card__badge">Nouveau</span>
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                 </a>
-                <a href="A-la-francaise.html" class="card">
+                <a href="a-la-francaise.html" class="card">
                     <div class="card__image">
                         <img src="./images/restaurants/toa-heftiba.jpg" alt="A la francaise">
                     </div>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                 </a>
-                <a href="Le-delice-des-sens" class="card">
+                <a href="le-delice-des-sens.html" class="card">
                     <div class="card__image">
                         <img src="./images/restaurants/louis-hansel-shotsoflouis.jpg" alt="Le delice des sens">
                     </div>
